--- a/templates/index.html
+++ b/templates/index.html
@@ -1,41 +1,28 @@
-﻿{% extends "layouts/layout1.html" %}
+{% extends "layouts/layout1.html" %}
 {% block title %}
 Our custom title
 {% endblock %}
 {% block content %}
     <!-- Header -->
 <header>
+    <section class="success" id="home">
     <div class="container">
         <div class="row">
-            <div class="col-lg-12  text-center">
-                <!--<img class="img-responsive" src="/static/img/cVision.jpg" alt=""> -->
-                <div class="col-lg-12 text-center">
-                    <h2 for="exampleInputFile">File input</h2>
-                      
-                   <form name="sentMessage" id="detectForm" method="post" action="/action_page" novalidate>
-                    <div class="row control-group">
-                        <div class="form-group col-xs-12 ">
-                            <label>Upload Image </label>
-                            <input type="file" class="form-control" id="file" name="file" required data-validation-required-message="Please upload image for detection.">
-                            <p class="help-block text-danger"></p>
-                        </div>
-                    </div>
-                              <br>
-                    <div id="success"></div>
-                    <div class="row">
-                        <div class="form-group col-xs-12">
-                            <button type="submit" class="btn btn-success btn-lg">Detect</button>
-                        </div>
-                    </div>
-                </form>
-                 
-                  </div>
+            <div class="col-lg-12">
+                <img class="img-responsive" src="/static/img/circle-cropped.png" alt="" height="300" width="300" >
+                <div class="intro-text">
+                    <span class="name">Deep See crime</span>
+                    <hr class="star-light">
+                     <span class="skills">Run, But you can't hide: AI-Based Facial Recognition Systems are now gonna track down criminals
+                    </span>
+                </div>
             </div>
         </div>
     </div>
+</section>
 </header>
 <!-- Portfolio Grid Section -->
-<section id="portfolio">
+<!--<section id="portfolio">
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
@@ -106,6 +93,39 @@ Our custom title
             </div>
         </div>
     </div>
+</section>-->
+<!-- Crime Detection Section-->
+<section id="detect">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12 text-center">
+                <h2>Anomaly Detection</h2>
+                <hr class="star-primary">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-8 col-lg-offset-2">
+                <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19. -->
+                <!-- The form should work on most web servers, but if the form is not working you may need to configure your web server differently. -->
+                <form name="sentMessage" id="predictForm" method="post" enctype=multipart/form-data action="/action_page" novalidate>
+                    <div class="row control-group">
+                        <div class="form-group col-xs-12 ">
+                            <label>Upload Video</label>
+                            <input type="file" class="form-control floating-label-form-group controls" id="file" name="file" required data-validation-required-message="Please upload video for detection.">
+                            <p class="help-block text-danger"></p>
+                        </div>
+                    </div>
+                    <br>
+                    <div id="success"></div>
+                    <div class="row">
+                        <div class="form-group col-xs-12">
+                            <button type="submit" class="btn btn-success btn-lg">Detect</button>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
 </section>
 <!-- About Section -->
 <section class="success" id="about">
@@ -118,16 +138,16 @@ Our custom title
         </div>
         <div class="row">
             <div class="col-lg-4 col-lg-offset-2">
-                <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.</p>
+                <p>Many surveillance systems are still require human supervision. Recent advances in computer vision in video surveillance lead to dramatic efficiency gains. Smart surveillance can be used to ensure public safety and to deter criminals</p>
             </div>
             <div class="col-lg-4">
-                <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</p>
+                <p>This project can extent to detect violence in images and videos and to identify the criminal activity using the attributes like gestures, gait and motions or objectionable/ illegal/ improper behavior and gesture.</p>
             </div>
-            <div class="col-lg-8 col-lg-offset-2 text-center">
+            <!--<div class="col-lg-8 col-lg-offset-2 text-center">
                 <a href="#" class="btn btn-lg btn-outline">
                     <i class="fa fa-download"></i> Download Theme
                 </a>
-            </div>
+            </div>-->
         </div>
     </div>
 </section>
@@ -146,28 +166,28 @@ Our custom title
                 <!-- The form should work on most web servers, but if the form is not working you may need to configure your web server differently. -->
                 <form name="sentMessage" id="contactForm" novalidate>
                     <div class="row control-group">
-                        <div class="form-group col-xs-12 floating-label-form-group controls">
+                        <div class="form-group col-xs-12 ">
                             <label>Name</label>
                             <input type="text" class="form-control" placeholder="Name" id="name" required data-validation-required-message="Please enter your name.">
                             <p class="help-block text-danger"></p>
                         </div>
                     </div>
                     <div class="row control-group">
-                        <div class="form-group col-xs-12 floating-label-form-group controls">
+                        <div class="form-group col-xs-12 ">
                             <label>Email Address</label>
                             <input type="email" class="form-control" placeholder="Email Address" id="email" required data-validation-required-message="Please enter your email address.">
                             <p class="help-block text-danger"></p>
                         </div>
                     </div>
                     <div class="row control-group">
-                        <div class="form-group col-xs-12 floating-label-form-group controls">
+                        <div class="form-group col-xs-12 ">
                             <label>Phone Number</label>
                             <input type="tel" class="form-control" placeholder="Phone Number" id="phone" required data-validation-required-message="Please enter your phone number.">
                             <p class="help-block text-danger"></p>
                         </div>
                     </div>
                     <div class="row control-group">
-                        <div class="form-group col-xs-12 floating-label-form-group controls">
+                        <div class="form-group col-xs-12 ">
                             <label>Message</label>
                             <textarea rows="5" class="form-control" placeholder="Message" id="message" required data-validation-required-message="Please enter a message."></textarea>
                             <p class="help-block text-danger"></p>
